--- a/index.html
+++ b/index.html
@@ -150,13 +150,14 @@
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              Parga Yönetim olarak bizler:
+              Parga Yönetim olarak diğer yönetim firmalarından farkımız:
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i>Dürüst</li>
-              <li><i class="ri-check-double-line"></i>Hızlı</li>
-              <li><i class="ri-check-double-line"></i>Çözüm odaklı</li>
-              <li><i class="ri-check-double-line"></i>Uygun fiyatlıyız</li>
+              <li><i class="ri-check-double-line"></i>Dürüstlük - Yapılan tamirlerden komisyon almıyoruz</li>
+              <li><i class="ri-check-double-line"></i>Hızlı - Arama ve mesajlarınıza ortalama 5 dakika içinde dönüş
+                yapıyoruz</li>
+              <li><i class="ri-check-double-line"></i>Çözüm odaklı - Bahane üretmiyoruz, sorun çözüyoruz</li>
+              <li><i class="ri-check-double-line"></i>Uygun fiyatlıyız - </li>
             </ul>
 
           </div>
@@ -207,18 +208,18 @@
               <h4 class="title"><a href="#">Hukuk</a></h4>
               <p class="description">Hukukla alakalı bütün ihtiyaçlarınızı memnuniyetle yürütüyor ve bunu, yaşam
                 alanınızın huzurunu bozmadan yapıyoruz. Aidat veya demirbaş ödemelerini yapmayan sakinlerden icra
-                yoluyla bu borçları tahsil ediyoruz.</p>
+                yoluyla bu borçları tahsil ediyoruz. Oluşacak avukatlık masraflarını biz karşılıyoruz.</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-spreadsheet"></i></div>
+              <h4 class="title"><a href="#">İletişim</a></h4>
+              <p class="description">Arama ve mesajlara çok hızlı dönüş yapıyoruz. Ortalama cevap süremiz 5 dakikayı
+                geçmiyor.</p>
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bxs-tree"></i></div>
-              <h4 class="title"><a href="#">Temizlik</a></h4>
-              <p class="description">Evinizde görmek istediğiniz temizliği yaşam alanınızın her yanında özenle
-                sağlıyoruz.</p>
-            </div>
-          </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bxs-binoculars"></i></div>
@@ -233,22 +234,23 @@
               <p class="description">İşletme bütçenizi ihtiyacınıza göre oluşturuyoruz.</p>
             </div>
           </div>
+
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-spreadsheet"></i></div>
+              <div class="icon"><i class="bx bx-task"></i></div>
               <h4 class="title"><a href="#">Denetim</a></h4>
-              <p class="description">Yaşam alanınızın haftalık, aylık denetimlerinizi yapıyoruz ve gördüğümüz eksikleri
+              <p class="description">Yaşam alanınızın aylık denetimlerini yapıyoruz ve gördüğümüz eksikleri
                 gideriyoruz.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-task"></i></div>
-              <h4 class="title"><a href="#">Geliştirme</a></h4>
-              <p class="description">Yaşam alanınızın eksiklerini görüyor ve gerekli iyileştirmeleri yapıyoruz.</p>
+              <div class="icon"><i class="bx bxs-tree"></i></div>
+              <h4 class="title"><a href="#">Temizlik</a></h4>
+              <p class="description">Evinizde görmek istediğiniz temizliği yaşam alanınızın her yanında özenle
+                sağlıyoruz.</p>
             </div>
           </div>
-
         </div>
 
       </div>
@@ -727,6 +729,54 @@
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/zeynep apartmanı.jpg" class="img-fluid"
+              alt="esenyurt apartman yönetimi şirketi" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Zeynep Apartmanı - Esenyurt</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/zeynep apartmanı.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Zeynep Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/ahmet fındıkçı.jpg" class="img-fluid"
+              alt="esenyurt apartman yönetimi firması" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Ahmet Fındıkçı Apartmanı - Esenyurt</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/ahmet fındıkçı.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Ahmet Fındıkçı Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/HÜSNİYE APARTMANI.jpg" class="img-fluid"
+              alt="beşiktaş apartman yönetimi firması" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Hüsniye Apartmanı - Beşiktaş</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/HÜSNİYE APARTMANI.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Hüsniye Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/AKAY APARTMANI.jpg" class="img-fluid"
+              alt="beşiktaş apartman yönetimi şirketi" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Akay Apartmanı - Beşiktaş</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/AKAY APARTMANI.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Akay Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
           <!-- 
          
 
@@ -901,8 +951,9 @@
             <div id="faq1" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Aidatları toplayamıyorsanız, komşularınızla kötü olmak istemiyorsanız, kapı kapı dolaşmak
-                istemiyorsanız, kavgalardan sıkıldıysanız, birliği sağlayamadığınız için işler yarım
-                kalıyorsa, hukuksal işler ve muhasebe ile uğraşacak vaktiniz yoksa devretmelisiniz.
+                istemiyorsanız, tartışmalardan sıkıldıysanız, birliği sağlayamadığınız için işler yarım
+                kalıyorsa, hukuksal işler ve muhasebe ile uğraşacak vaktiniz yoksa profesyonel bir şirkete yönetimi
+                devretmeniz en uygun karar olacaktır.
               </p>
             </div>
           </li>
@@ -913,7 +964,7 @@
                 class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq2" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Yaşam alanınızla ilgili her işi biz profesyonel firmalar üstleniyor ve sizi kavga, dövüş, sinir, stres
+                Yaşam alanınızla ilgili her işi biz üstleniyor ve sizi olası tartışmalardan, stres
                 ve zaman kaybından kurtarıyoruz. Bunu yaparken de huzurun korunması en önemli önceliğimiz oluyor.
                 Aidatlar düzenli toplanıyor, giderler düzenli ödeniyor, rutin bakımlar yapılıyor ve arızalar hızlıca
                 çözülüyor.
@@ -927,20 +978,20 @@
                 class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq3" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Bizi arayın! Bizler bu konuda deneyimliyiz. Birden fazla yol var, bizi ararsanız memnuniyetle hangi
-                yolun size uygun olduğunu gösteririz.
+                Bizi arayın! Bizler bu konuda deneyimliyiz. Birçok yol var, bizi ararsanız memnuniyetle hangi
+                yolun size uygun olduğunu gösterebiliriz.
               </p>
             </div>
           </li>
 
           <li>
             <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">Profesyonel yönetim firmasının
-              bedelini karşılayacak bütçemiz yoksa ne yapmalıyız? <i class="bi bi-chevron-down icon-show"></i><i
-                class="bi bi-chevron-up icon-close"></i></div>
+              maliyeti ne kadar?
+              <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i>
+            </div>
             <div id="faq4" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Yine bizi arayın! Biz büyük, küçük iş ayırmıyoruz. Lokasyona göre fiyat vermiyoruz. İş yüküne ve
-                bütçenize göre fiyat veriyoruz ve bu konuda çok esneğiz.
+                Fiyatlarımız sabit. Lokasyona veya yaşam alanınınızın büyüklüğüne göre fiyat vermiyoruz.
               </p>
             </div>
           </li>
@@ -1131,6 +1182,25 @@
 
 
         <div class="row">
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/onel_hukuk_1_612x612.webp" class="img-fluid" alt="site yönetimi aidat icra"
+                  loading="lazy">
+                <div class="social">
+                  <a href="#team2"><i class="bi bi-twitter"></i></a>
+                  <a href="#team2"><i class="bi bi-facebook"></i></a>
+                  <a href="#team2"><i class="bi bi-instagram"></i></a>
+                  <a href="#team2"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Önel Hukuk Bürosu</h4>
+                <span>Hukuk Danışmanlığı ve İcra</span>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
