--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@
               <h4><sup>₺</sup>180<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
-                <li>Temizlik</li>
+                <li>Temizlik Takibi</li>
                 <li>Muhasebe</li>
                 <li>Hukuk</li>
                 <!-- <li class="na">Massa ultricies mi</li> -->
@@ -892,11 +892,11 @@
               <h4><sup>₺</sup>180<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
-                <li>Temizlik</li>
+                <li>Temizlik Takibi</li>
                 <li>Muhasebe</li>
                 <li>Hukuk</li>
-                <li>Peyzaj</li>
-                <li>Güvenlik</li>
+                <li>Peyzaj Takibi</li>
+                <li>Güvenlik Takibi</li>
                 <li>Ortak alanlar ve sosyal tesislerin düzeni ve işlerliğinin sağlanması</li>
                 <!-- <li class="na">Massa ultricies mi</li> -->
               </ul>
@@ -912,10 +912,10 @@
               <h4><sup>₺</sup>250<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
-                <li>Temizlik</li>
+                <li>Temizlik Takibi</li>
                 <li>Muhasebe</li>
                 <li>Hukuk</li>
-                <li>Güvenlik</li>
+                <li>Güvenlik Takibi</li>
                 <li>Gerekli rapor ve ruhsatlar</li>
                 <li>Belediye ilişkilerinin yürütülmesi</li>
                 <li>Resmi kurumlardan gerekli evrakların temini</li>
@@ -1490,7 +1490,7 @@
     </div>
 
     <div class="container d-md-flex py-4">
-      <div class="logo"><img src="android-chrome-192x192.png"> </div>
+      <div class="logo"><img src="android-chrome-192x192.png" alt="Parga Yönetim Apartman ve Site Yönetimi"> </div>
       <div class="me-md-auto text-center text-md-start">
 
         <div class=" copyright">
