--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
               <li><i class="ri-check-double-line"></i>Dürüstlük - Yapılan tamirlerden komisyon almıyoruz</li>
               <li><i class="ri-check-double-line"></i>Hızlı - Arama ve mesajlarınıza ortalama 5 dakika içinde dönüş
                 yapıyoruz</li>
-              <li><i class="ri-check-double-line"></i>Çözüm odaklı - Bahane üretmiyoruz, sorun çözüyoruz</li>
-              <li><i class="ri-check-double-line"></i>Uygun fiyatlıyız - </li>
+              <li><i class="ri-check-double-line"></i>Çözüm odaklı - Bahane üretmiyoruz, sorunları çözüyoruz</li>
+              <li><i class="ri-check-double-line"></i>Uygun fiyatlıyız </li>
             </ul>
 
           </div>
@@ -777,6 +777,44 @@
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/cumhuriyet.jpg" class="img-fluid"
+              alt="mecidiyeköy apartman yönetimi firmaları" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Cumhuriyet Apartmanı - Şişli</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/cumhuriyet.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Cumhuriyet Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/Akdemir.jpeg" class="img-fluid"
+              alt="bahçelievler apartman yönetimi firmaları" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Akdemir Apartmanı - Bahçelievler</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/Akdemir.jpeg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Akdemir Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/New İstanbul.jpg" class="img-fluid"
+              alt="bağcılar apartman yönetimi firmaları" loading="lazy">
+            <div class="portfolio-info">
+              <h4>New İstanbul Evleri Sitesi - Bağcılar</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/New İstanbul.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="New İstanbul Evleri"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+
           <!-- 
          
 
@@ -871,7 +909,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="box recommended">
               <h3>Apartman</h3>
-              <h4><sup>₺</sup>180<span> / aylık</span></h4>
+              <h4><sup></sup>180₺<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Temizlik Takibi</li>
@@ -889,7 +927,7 @@
             <div class="box recommended">
               <!-- <span class="recommended-badge">En uygunu</span> -->
               <h3>Site</h3>
-              <h4><sup>₺</sup>180<span> / aylık</span></h4>
+              <h4><sup></sup>180₺<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Temizlik Takibi</li>
@@ -909,7 +947,7 @@
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="box recommended">
               <h3>İş Merkezi</h3>
-              <h4><sup>₺</sup>250<span> / aylık</span></h4>
+              <h4><sup></sup>250₺<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Temizlik Takibi</li>
