--- a/index.html
+++ b/index.html
@@ -814,7 +814,17 @@
             </div>
           </div>
 
-
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/Esma Sultan.jpeg" class="img-fluid"
+              alt="bakırköy apartman yönetimi firmaları" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Esma Sultan Apartmanı - Bakırköy</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/Esma Sultan.jpeg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Esma Sultan Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
           <!-- 
          
 
