--- a/index.html
+++ b/index.html
@@ -825,6 +825,50 @@
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/Topçular.jpeg" class="img-fluid"
+              alt="beylikdüzü apartman yönetimi firmaları" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Topçular Apartmanı - Beylikdüzü</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/Topçular.jpeg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Topçular Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/Toprak İnşaat.jpg" class="img-fluid"
+              alt="bahçelievler apartman yönetim şirketi" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Toprak Apartmanı - Bahçelievler</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/Toprak İnşaat.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Toprak Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/Çimen.jpg" class="img-fluid"
+              alt="bahçelievler apartman yönetim şirketleri" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Çimen Apartmanı - Bahçelievler</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/Çimen.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Çimen Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+
+
+
+
+
+
+
           <!-- 
          
 
