--- a/index.html
+++ b/index.html
@@ -1211,7 +1211,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sema H.</h4>
+                <h4>Ertan K.</h4>
                 <span>Muhasebe</span>
               </div>
             </div>
@@ -1231,6 +1231,25 @@
               </div>
               <div class="member-info">
                 <h4>Zehra A.</h4>
+                <span>Tahsilat</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/pargaaa_1709905076-trimmy-pargalogo (1).png" class="img-fluid" alt="Sema H."
+                  loading="lazy">
+                <div class="social">
+                  <a href="#team"><i class="bi bi-twitter"></i></a>
+                  <a href="#team"><i class="bi bi-facebook"></i></a>
+                  <a href="#team"><i class="bi bi-instagram"></i></a>
+                  <a href="#team"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Mihriban B.</h4>
                 <span>Tahsilat</span>
               </div>
             </div>
