--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <img src="/apartman-yonetimi/referanslar/New İstanbul.jpg" class="img-fluid"
               alt="bağcılar apartman yönetimi firmaları" loading="lazy">
             <div class="portfolio-info">
@@ -963,7 +963,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="box recommended">
               <h3>Apartman</h3>
-              <h4><sup></sup>180₺<span> / aylık</span></h4>
+              <h4><sup></sup>200₺<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Temizlik Takibi</li>
@@ -981,7 +981,7 @@
             <div class="box recommended">
               <!-- <span class="recommended-badge">En uygunu</span> -->
               <h3>Site</h3>
-              <h4><sup></sup>180₺<span> / aylık</span></h4>
+              <h4><sup></sup>225₺<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Temizlik Takibi</li>
@@ -1001,7 +1001,7 @@
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="box recommended">
               <h3>İş Merkezi</h3>
-              <h4><sup></sup>250₺<span> / aylık</span></h4>
+              <h4><sup></sup>275₺<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Temizlik Takibi</li>
