--- a/index.html
+++ b/index.html
@@ -409,6 +409,44 @@
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="/apartman-yonetimi/referanslar/Özde Tower.jpg" class="img-fluid"
+              alt="zeytinburnu apartman yönetim şirketleri" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Özde Tower Sitesi - Zeytinburnu</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/Özde Tower.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Özde Tower Sitesi"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="/apartman-yonetimi/referanslar/New İstanbul.jpg" class="img-fluid"
+              alt="bağcılar apartman yönetimi firmaları" loading="lazy">
+            <div class="portfolio-info">
+              <h4>New İstanbul Evleri Sitesi - Bağcılar</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/New İstanbul.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="New İstanbul Evleri"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="/apartman-yonetimi/referanslar/YILDIZ KULE SİTESİ.jpg" class="img-fluid"
+              alt="bağcılar apartman yönetimi" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Yıldız Kule Sitesi - Bağcılar</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/YILDIZ KULE SİTESİ.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="YILDIZ KULE SİTESİ"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <img src="site-yonetimi/referanslar/RAFTOZ ARGUN.jpg" class="img-fluid" alt="site yönetimi" loading="lazy">
             <div class="portfolio-info">
@@ -685,17 +723,7 @@
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="/apartman-yonetimi/referanslar/YILDIZ KULE SİTESİ.jpg" class="img-fluid"
-              alt="bağcılar apartman yönetimi" loading="lazy">
-            <div class="portfolio-info">
-              <h4>Yıldız Kule Sitesi - Bağcılar</h4>
-              <p></p>
-              <a href="/apartman-yonetimi/referanslar/YILDIZ KULE SİTESİ.jpg" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="YILDIZ KULE SİTESİ"><i class="bx bx-plus"></i></a>
-              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <img src="/apartman-yonetimi/referanslar/POYRAZ APARTMANI.jpg" class="img-fluid"
               alt="esenyurt apartman yönetimi" loading="lazy">
@@ -802,17 +830,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="/apartman-yonetimi/referanslar/New İstanbul.jpg" class="img-fluid"
-              alt="bağcılar apartman yönetimi firmaları" loading="lazy">
-            <div class="portfolio-info">
-              <h4>New İstanbul Evleri Sitesi - Bağcılar</h4>
-              <p></p>
-              <a href="/apartman-yonetimi/referanslar/New İstanbul.jpg" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="New İstanbul Evleri"><i class="bx bx-plus"></i></a>
-              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
+
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <img src="/apartman-yonetimi/referanslar/Esma Sultan.jpeg" class="img-fluid"
@@ -861,7 +879,6 @@
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
-
 
 
 
