--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
 
 
     <div class="container d-flex align-items-center justify-content-between">
-      <h2 class="logo"><a href="#">PARGA YÖNETİM</a></h2>
+      <h2 class="logo"><a href="#">Muhasebe</a></h2>
+      <h2 class="logo"><a href="tel:+905455944443">0545 594 44 43</a></h2>
+      <h2 class="logo"><a href="#">|</a></h2>
+      <h2 class="logo"><a href="#">İletişim</a></h2>
       <h2 class="logo"><a href="tel:+905467620002">0546 762 00 02</a></h2>
 
 
@@ -352,7 +355,83 @@
 
 
     </section><!-- End Cta Section -->
+    <!-- ======= Pricing Section ======= -->
+    <section id="pricing" class="pricing">
+      <div class="container">
 
+        <div class="section-title">
+          <h2>Fiyatlandırma</h2>
+          <h3>Her bütçeye uygun <span>fiyatlarımız</span></h3>
+          <p>Yaşam alanınızı yönetmemiz için ödeyeceğiniz ücret lokasyonunuzdan, sosyal konumunuzdan tamamen bağımsız!
+            Apartman ve site yönetiminde ücretlerimiz sabit.</p>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-4 col-md-6">
+            <div class="box recommended">
+              <h3>Apartman</h3>
+              <h4><sup></sup>200₺<span> / aylık</span></h4>
+              <ul>
+                <li>Aidat toplama</li>
+                <li>Temizlik Takibi</li>
+                <li>Muhasebe</li>
+                <li>Hukuk</li>
+                <!-- <li class="na">Massa ultricies mi</li> -->
+              </ul>
+              <div class="btn-wrap">
+                <a href="#contact" class="btn-buy">İletişime geç</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
+            <div class="box recommended">
+              <!-- <span class="recommended-badge">En uygunu</span> -->
+              <h3>Site</h3>
+              <h4><sup></sup>225₺<span> / aylık</span></h4>
+              <ul>
+                <li>Aidat toplama</li>
+                <li>Temizlik Takibi</li>
+                <li>Muhasebe</li>
+                <li>Hukuk</li>
+                <li>Peyzaj Takibi</li>
+                <li>Güvenlik Takibi</li>
+                <li>Ortak alanlar ve sosyal tesislerin düzeni ve işlerliğinin sağlanması</li>
+                <!-- <li class="na">Massa ultricies mi</li> -->
+              </ul>
+              <div class="btn-wrap">
+                <a href="#contact" class="btn-buy">İletişime geç</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
+            <div class="box recommended">
+              <h3>İş Merkezi</h3>
+              <h4><sup></sup>275₺<span> / aylık</span></h4>
+              <ul>
+                <li>Aidat toplama</li>
+                <li>Temizlik Takibi</li>
+                <li>Muhasebe</li>
+                <li>Hukuk</li>
+                <li>Güvenlik Takibi</li>
+                <li>Gerekli rapor ve ruhsatlar</li>
+                <li>Belediye ilişkilerinin yürütülmesi</li>
+                <li>Resmi kurumlardan gerekli evrakların temini</li>
+
+                <!-- <li class="na">Massa ultricies mi</li> -->
+              </ul>
+              <div class="btn-wrap">
+                <a href="#contact" class="btn-buy">İletişime geç</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Pricing Section -->
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
       <div class="container">
@@ -446,6 +525,17 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="/apartman-yonetimi/referanslar/live selale.jpg" class="img-fluid" alt="esenyurt site yönetimi"
+              loading="lazy">
+            <div class="portfolio-info">
+              <h4>Live Şelale Sitesi - Esenyurt</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/live selale.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="LİVE ŞELALE SİTESİ"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <img src="site-yonetimi/referanslar/RAFTOZ ARGUN.jpg" class="img-fluid" alt="site yönetimi" loading="lazy">
@@ -880,7 +970,17 @@
             </div>
           </div>
 
-
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/bahar.jpeg" class="img-fluid"
+              alt="bakırköy apartman yönetim şirketleri" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Bahar Apartmanı - Bakırköy</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/bahar.jpeg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Bahar Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
 
 
 
@@ -964,83 +1064,7 @@
 
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing">
-      <div class="container">
 
-        <div class="section-title">
-          <h2>Fiyatlandırma</h2>
-          <h3>Her bütçeye uygun <span>fiyatlarımız</span></h3>
-          <p>Yaşam alanınızı yönetmemiz için ödeyeceğiniz ücret lokasyonunuzdan, sosyal konumunuzdan tamamen bağımsız!
-            Apartman ve site yönetiminde ücretlerimiz sabit.</p>
-        </div>
-
-        <div class="row">
-
-          <div class="col-lg-4 col-md-6">
-            <div class="box recommended">
-              <h3>Apartman</h3>
-              <h4><sup></sup>200₺<span> / aylık</span></h4>
-              <ul>
-                <li>Aidat toplama</li>
-                <li>Temizlik Takibi</li>
-                <li>Muhasebe</li>
-                <li>Hukuk</li>
-                <!-- <li class="na">Massa ultricies mi</li> -->
-              </ul>
-              <div class="btn-wrap">
-                <a href="#contact" class="btn-buy">İletişime geç</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
-            <div class="box recommended">
-              <!-- <span class="recommended-badge">En uygunu</span> -->
-              <h3>Site</h3>
-              <h4><sup></sup>225₺<span> / aylık</span></h4>
-              <ul>
-                <li>Aidat toplama</li>
-                <li>Temizlik Takibi</li>
-                <li>Muhasebe</li>
-                <li>Hukuk</li>
-                <li>Peyzaj Takibi</li>
-                <li>Güvenlik Takibi</li>
-                <li>Ortak alanlar ve sosyal tesislerin düzeni ve işlerliğinin sağlanması</li>
-                <!-- <li class="na">Massa ultricies mi</li> -->
-              </ul>
-              <div class="btn-wrap">
-                <a href="#contact" class="btn-buy">İletişime geç</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
-            <div class="box recommended">
-              <h3>İş Merkezi</h3>
-              <h4><sup></sup>275₺<span> / aylık</span></h4>
-              <ul>
-                <li>Aidat toplama</li>
-                <li>Temizlik Takibi</li>
-                <li>Muhasebe</li>
-                <li>Hukuk</li>
-                <li>Güvenlik Takibi</li>
-                <li>Gerekli rapor ve ruhsatlar</li>
-                <li>Belediye ilişkilerinin yürütülmesi</li>
-                <li>Resmi kurumlardan gerekli evrakların temini</li>
-
-                <!-- <li class="na">Massa ultricies mi</li> -->
-              </ul>
-              <div class="btn-wrap">
-                <a href="#contact" class="btn-buy">İletişime geç</a>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Pricing Section -->
 
     <!-- ======= F.A.Q Section ======= -->
     <section id="faq" class="faq">
