--- a/index.html
+++ b/index.html
@@ -983,6 +983,42 @@
           </div>
 
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/başyiğitler.jpg" class="img-fluid"
+              alt="esenyurt apartman yönetim şirketleri" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Başyiğitler Apartmanı - Esenyurt</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/başyiğitler.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Başyiğitler Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/Nilgün.jpg" class="img-fluid"
+              alt="şişli apartman yönetim şirketleri" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Nilgün Apartmanı - Şişli</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/Nilgün.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Nilgün Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/O.116-O.117 Blokları.jpg" class="img-fluid"
+              alt="bakırköy apartman yönetim şirketleri" loading="lazy">
+            <div class="portfolio-info">
+              <h4>O.116-O117 Blokları - Bakırköy</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/O.116-O.117 Blokları.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="O.116-O.117 Blokları"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
 
 
 
