--- a/index.html
+++ b/index.html
@@ -1019,8 +1019,29 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/emek.jpg" class="img-fluid" alt="şişli apartman yönetim şirketleri"
+              loading="lazy">
+            <div class="portfolio-info">
+              <h4>Emek Apartmanı - Şişli</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/emek.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Emek Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
 
-
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="/apartman-yonetimi/referanslar/GÜRSEL RE.jpg" class="img-fluid"
+              alt="kağıthane site yönetim şirketleri" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Gürsel Residence - Kağıthane</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/GÜRSEL RE.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Gürsel Residence"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
 
           <!-- 
          
